force-app/main/default/objects/Item_Donor__c/Item_Donor__c.object-meta.xml
<CustomObject>
    <label>Item Donor</label>
    <nameField>
        <displayFormat>ID-{00000000}</displayFormat>
        <label>Item Donor Staging Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Donors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>