force-app/main/default/objects/Item_Donor__c/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Item Donors</relationshipLabel>
    <relationshipName>Item_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>