force-app/main/default/objects/Item_Donor__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Item Donor Staging Records</relationshipLabel>
    <relationshipName>Item_Donor_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>