force-app/main/default/objects/Item_Donor__c/fields/Realized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Realized_Amount__c</fullName>
    <label>Realized Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>